force-app/main/default/objects/Checklist_Template_Item__c/Checklist_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Template Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist  Template Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>