force-app/main/default/objects/Checklist_Template_Item__c/fields/Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template</label>
    <referenceTo>Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklist  Template Items</relationshipLabel>
    <relationshipName>Checklist_Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>