force-app/main/default/objects/Checklist_Template_Item__c/fields/Dealer_Actionable__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Actionable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Actionable</label>
    <type>Checkbox</type>
</CustomField>