force-app/main/default/objects/Checklist_Template_Item__c/fields/Dealer_Visible__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Visible</label>
    <type>Checkbox</type>
</CustomField>