force-app/main/default/objects/Checklist_Template_Item__c/fields/Item_Order__c.field-meta.xml
<CustomField>
    <fullName>Item_Order__c</fullName>
    <label>Item Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>