force-app/main/default/objects/Checklist_Template_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Item_Order__c</columns>
    <columns>Required__c</columns>
    <columns>Dealer_Visible__c</columns>
    <columns>Dealer_Actionable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>